--- a/espera.html
+++ b/espera.html
@@ -36,6 +36,7 @@
     <!-- Nossos scripts -->
     <script src="scripts/firebase/config.js"></script>
     <script src="scripts/firebase/database.js"></script> <!-- Alterado para database.js -->
+    <script src="scripts/pareamento.js"></script>
     <script src="scripts/fila.js"></script>
     <script src="scripts/espera.js"></script>
 </body>
