--- a/jogo.html
+++ b/jogo.html
@@ -90,7 +90,7 @@
                     <button id="prevRound" class="nav-btn" disabled>← Anterior</button>
                     <span id="roundNumber">1/4</span>
                     <button id="nextRound" class="nav-btn">Próxima →</button>
-                    <button id="finishGame" class="finish-btn">Finalizar Jogo</button>
+                    <button id="finishGameListener" class="finish-btn">Finalizar Jogo</button>
                 </div>
             </div>
 
@@ -132,7 +132,7 @@
                     <button id="submitAnswer" class="submit-btn" disabled>
                         Confirmar Resposta
                     </button>
-                    <button id="finishGame" class="finish-btn">Finalizar Jogo</button>
+                    <button id="finishGameIdentifier" class="finish-btn">Finalizar Jogo</button>
                 </div>
             </div>
         </main>
