--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>BirdBox Game - Início</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="estilos/index.css">
+    <link rel="stylesheet" href="estilos/ranking.css"> <!-- CSS do ranking -->
 </head>
 
 <body>
@@ -24,18 +25,70 @@
                     <input type="text" class="form-control" id="playerName" placeholder="Seu nome" maxlength="20">
                 </div>
 
-                <button id="enterGame" class="btn-birdbox">
-                    Entrar no Jogo
-                </button>
+                <div class="d-grid gap-2">
+                    <button id="enterGame" class="btn-birdbox">Entrar no Jogo</button>
+                    <button id="openRanking" class="btn-birdbox">Ranking</button>
+                    <button id="openRules" class="btn-birdbox">Regras</button>
+                </div>
 
                 <div class="info-text">
-                    <small>
-                        Ao entrar, você será pareado aleatoriamente com outro jogador
-                    </small>
+                    <small>Ao entrar, você será pareado aleatoriamente com outro jogador</small>
                 </div>
             </div>
         </div>
     </div>
+
+    <!-- Modal Regras -->
+    <!-- Modal Regras -->
+    <div class="modal fade" id="rulesModal" tabindex="-1" aria-labelledby="rulesModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg">
+            <div class="modal-content"
+                style="background: var(--surface); color: var(--text); border-radius: var(--radius);">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="rulesModalLabel">Regras do BirdBox</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
+                        aria-label="Fechar"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Assista ao vídeo abaixo para entender todas as regras do jogo:</p>
+                    <div class="ratio ratio-16x9">
+                        <video controls>
+                            <source src="videos/regras.mp4" type="video/mp4">
+                            Seu navegador não suporta vídeos.
+                        </video>
+                    </div>
+
+                    <h6 class="mt-3">Regras detalhadas:</h6>
+                    <ul class="mt-2">
+                        <li><strong>Formação de duplas:</strong> As duplas são aleatórias. Cada aluno precisará
+                            encontrar sua dupla sozinho no meio da multidão.</li>
+                        <li><strong>Funções:</strong>
+                            <ul>
+                                <li><strong>Ouvinte:</strong> Deve ouvir atentamente os sons e descrevê-los com clareza
+                                    para o parceiro.</li>
+                                <li><strong>Leitor:</strong> Recebe a descrição do ouvinte e escolhe as respostas
+                                    corretas.</li>
+                            </ul>
+                        </li>
+                        <li><strong>Atenção ao encontrar a dupla:</strong> Nem sempre a dupla estará correta. Analise
+                            bem antes de agir.</li>
+                        <li><strong>Cuidado ao ouvir o som:</strong> Sons altos podem ser escutados por outras duplas.
+                            Tente ser claro, mas discreto.</li>
+                        <li><strong>Respostas finais:</strong> Cada resposta não tem volta. Pense bem antes de escolher.
+                        </li>
+                        <li><strong>Descreva detalhadamente:</strong> Quanto melhor você descrever o que está ouvindo,
+                            maior a chance de sua dupla acertar.</li>
+                        <li><strong>Cooperação:</strong> O sucesso depende da comunicação entre ouvinte e leitor.
+                            Trabalhem juntos!</li>
+                    </ul>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn-birdbox" data-bs-dismiss="modal">Fechar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
     <!-- Firebase SDK (versão compat) -->
     <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
@@ -43,10 +96,13 @@
 
     <!-- Nossos scripts -->
     <script src="scripts/firebase/config.js"></script>
-    <script src="scripts/firebase/database.js"></script> <!-- Alterado para database.js -->
+    <script src="scripts/firebase/database.js"></script>
     <script src="scripts/util.js"></script>
     <script src="scripts/nome.js"></script>
     <script src="scripts/index.js"></script>
+
+    <!-- Bootstrap JS (necessário para modal) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
