--- a/jogo.html
+++ b/jogo.html
@@ -50,7 +50,7 @@
 
                 <div class="sound-section">
                     <div class="audio-player">
-                        <audio id="soundPlayer" controls></audio>
+                        <audio id="soundPlayer"></audio>
                         <div class="audio-controls">
                             <button id="playSound" class="audio-btn">
                                 <span class="audio-icon">▶️</span>
